MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/mfg_Service_Term__c.object-meta.xml
<CustomObject>
    <label>Service Term</label>
    <nameField>
        <label>Service Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>