MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/fields/mfg_Active__c.field-meta.xml
<CustomField>
    <fullName>mfg_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>