MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/fields/mfg_Covered_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Covered_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covered Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Terms</relationshipLabel>
    <relationshipName>Service_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>