MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/fields/mfg_Service_Scope_Value__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Scope_Value__c</fullName>
    <label>Service Scope Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>