MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/fields/mfg_Service_Unit__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Unit__c</fullName>
    <label>Service Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>