MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/fields/Service_Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Term_Number__c</fullName>
    <displayFormat>ST-{0000000000}</displayFormat>
    <label>Service Term Number</label>
    <type>AutoNumber</type>
</CustomField>