MFG Ready Version/force-app/main/default/objects/mfg_Service_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Service_Term_Number__c</columns>
    <columns>NAME</columns>
    <columns>mfg_Service_Level__c</columns>
    <columns>mfg_Service_Scope_Value__c</columns>
    <columns>mfg_Parts_Coverage__c</columns>
    <columns>mfg_Labor_Coverage__c</columns>
    <columns>mfg_Expense_Coverage__c</columns>
    <columns>mfg_Service_Duration__c</columns>
    <columns>mfg_Service_Unit__c</columns>
    <columns>mfg_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>